changed property validation; changed tests

--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
     <Compile Include="Borrower.cs" />
+    <Compile Include="Constants\ErrorMessages.cs" />
     <Compile Include="Domain.cs" />
     <Compile Include="Edition.cs" />
     <Compile Include="Enums\EBookType.cs" />
