added BorrowerService with not working Add New functionality

--- a/DataMapper/DataMapper.csproj
+++ b/DataMapper/DataMapper.csproj
@@ -55,12 +55,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\AddressRepository.cs" />
     <Compile Include="DAL\BaseRepository.cs" />
     <Compile Include="DAL\BookRepository.cs" />
+    <Compile Include="DAL\BorrowerRepository.cs" />
     <Compile Include="DAL\LibraryDBContext.cs" />
     <Compile Include="DAL\EditionRepository.cs" />
+    <Compile Include="Interfaces\DataAccess\IBorrowerRepository.cs" />
     <Compile Include="Interfaces\DataAccess\IEditionRepository.cs" />
     <Compile Include="Interfaces\DataAccess\IRepository.cs" />
+    <Compile Include="Interfaces\DataAccess\IAddressRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
