--- a/LibraryManagementApp/LibraryManagementApp.csproj
+++ b/LibraryManagementApp/LibraryManagementApp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Constants\MenuErrors.cs" />
     <Compile Include="Constants\MenuOutput.cs" />
     <Compile Include="Enums\EMenuType.cs" />
+    <Compile Include="Helpers\DateHelper.cs" />
     <Compile Include="Helpers\MenuHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +79,10 @@
     <ProjectReference Include="..\DomainModel\DomainModel.csproj">
       <Project>{a728c6f8-46a4-4d0a-9a85-b0b90b5b9710}</Project>
       <Name>DomainModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{f14a9aba-c6a4-408c-91ce-cca70e0f9337}</Project>
+      <Name>Services</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
