working Add New Borrower functionality; show list of borrowers

--- a/LibraryManagementApp/LibraryManagementApp.csproj
+++ b/LibraryManagementApp/LibraryManagementApp.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Constants\MenuErrors.cs" />
     <Compile Include="Constants\MenuOutput.cs" />
+    <Compile Include="Constants\MenuSuccess.cs" />
     <Compile Include="Enums\EMenuType.cs" />
     <Compile Include="Helpers\DateHelper.cs" />
     <Compile Include="Helpers\MenuHelper.cs" />
