--- a/DataMapper/DataMapper.csproj
+++ b/DataMapper/DataMapper.csproj
@@ -83,6 +83,14 @@
     <Compile Include="Migrations\202001072047113_borrower_ctor-change.designer.cs">
       <DependentUpon>202001072047113_borrower_ctor-change.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001091801543_ctor-changes.cs" />
+    <Compile Include="Migrations\202001091801543_ctor-changes.designer.cs">
+      <DependentUpon>202001091801543_ctor-changes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001100714137_many-to-many-relations.cs" />
+    <Compile Include="Migrations\202001100714137_many-to-many-relations.designer.cs">
+      <DependentUpon>202001100714137_many-to-many-relations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -106,6 +114,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202001072047113_borrower_ctor-change.resx">
       <DependentUpon>202001072047113_borrower_ctor-change.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001091801543_ctor-changes.resx">
+      <DependentUpon>202001091801543_ctor-changes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001100714137_many-to-many-relations.resx">
+      <DependentUpon>202001100714137_many-to-many-relations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
