--- a/TestServices/packages.config
+++ b/TestServices/packages.config
@@ -5,6 +5,7 @@
   <package id="Moq" version="4.13.1" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.16.0" targetFramework="net461" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
 </packages>
