--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,18 @@ artifacts/
 StyleCopReport.xml
 
 # Files built by Visual Studio
+*.cache
+*.dll
+*.exe
+*.pdb
+/build/
+*.suo
+*.user
+_ReSharper.*/
+*.sdf
+*.opensdf
+*.tlog
+*.log
 *_i.c
 *_p.c
 *_h.h
