--- a/DataMapper/DataMapper.csproj
+++ b/DataMapper/DataMapper.csproj
@@ -36,27 +36,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>..\docs\DataMapper.xml</DocumentationFile>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>true</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>true</Prefer32Bit>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
@@ -113,6 +92,18 @@
     <Compile Include="Migrations\202001100714137_many-to-many-relations.designer.cs">
       <DependentUpon>202001100714137_many-to-many-relations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001122051373_Modified-properties.cs" />
+    <Compile Include="Migrations\202001122051373_Modified-properties.designer.cs">
+      <DependentUpon>202001122051373_Modified-properties.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001122111013_Added-loans-to-edition.cs" />
+    <Compile Include="Migrations\202001122111013_Added-loans-to-edition.designer.cs">
+      <DependentUpon>202001122111013_Added-loans-to-edition.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001122143504_Editions-Loans-Borrower.cs" />
+    <Compile Include="Migrations\202001122143504_Editions-Loans-Borrower.designer.cs">
+      <DependentUpon>202001122143504_Editions-Loans-Borrower.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -142,6 +133,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202001100714137_many-to-many-relations.resx">
       <DependentUpon>202001100714137_many-to-many-relations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001122051373_Modified-properties.resx">
+      <DependentUpon>202001122051373_Modified-properties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001122111013_Added-loans-to-edition.resx">
+      <DependentUpon>202001122111013_Added-loans-to-edition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001122143504_Editions-Loans-Borrower.resx">
+      <DependentUpon>202001122143504_Editions-Loans-Borrower.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
