--- a/LibraryManagementApp/App.config
+++ b/LibraryManagementApp/App.config
@@ -11,7 +11,7 @@
     </startup>
 
   <connectionStrings>
-    <add name="strLibraryConnection" providerName="System.Data.SqlClient" connectionString="server=.\SQLEXPRESS; database=Library; uid=developer; pwd=d3v3l0p3r"/>
+    <add name="strLibraryConnection" providerName="System.Data.SqlClient" connectionString="Server=cms2\sql2k8r2;Database=DEV_Botanica_AlexandraH;User Id=iusr_botanica;Password=b0t@n1c@1;"/>
   </connectionStrings>
   
     <entityFramework>
