--- a/TestServices/TestServices.csproj
+++ b/TestServices/TestServices.csproj
@@ -71,12 +71,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorServiceTest.cs" />
+    <Compile Include="BookServiceAdd.cs" />
     <Compile Include="BorrowerServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="stylecop.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DomainModel\DomainModel.csproj">
