--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ValidationErrors.cs" />
     <Compile Include="Helpers\ErrorsHandler.cs" />
     <Compile Include="Interfaces\IAddressService.cs" />
     <Compile Include="Interfaces\IAuthorService.cs" />
