--- a/TestDomainModel/packages.config
+++ b/TestDomainModel/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.0" targetFramework="net461" developmentDependency="true" />
 </packages>
